crates/nx-syntax/tests/fixtures/invalid/unclosed-brace.nx
// Unclosed brace in interpolation
import core.html

let <Broken /> =
  <div>{1 + 2</div>
